// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendModal has the expected html structure 1`] = `
<action-modal-stub
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
    />
     
    <!---->
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;

exports[`SendModal should show address required error 1`] = `
<action-modal-stub
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tm-form-msg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <!---->
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;

exports[`SendModal should show bech32 error when address length is too long 1`] = `
<action-modal-stub
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
    />
     
    <tm-form-msg-stub
      body="No separator character for asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
      msg=""
      name="Address"
      type="bech32"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <!---->
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;

exports[`SendModal should show bech32 error when address length is too short 1`] = `
<action-modal-stub
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdf"
    />
     
    <tm-form-msg-stub
      body="asdf too short"
      msg=""
      name="Address"
      type="bech32"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <!---->
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;

exports[`SendModal should show bech32 error when alphanumeric is wrong 1`] = `
<action-modal-stub
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tm-form-msg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
    />
     
    <tm-form-msg-stub
      msg=""
      name="Amount"
      type="required"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;
